footer and parallax behind contact card glitch fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,9 @@
   height: 96%;
 
 }
-
+#parallax-three{
+  margin-bottom: -10vh;
+}
 .nav-tabs>.active>a, .nav-tabs>.active>a:hover, .nav-tabs>.active>a:focus {
     border-color: #d45500;
     border-bottom-color: transparent;
